# roomba

./: package.xml  setup.py
config/: diffdrive_control.yaml  general.rviz  mapping.yaml  nav.rviz  navigation.yaml  view.rviz
launch/: gazebo.launch.py  mapping.launch.py  navigation.launch.py
model/: roomba.FCStd
robot_description/magni/: magni.urdf.xacro
robot_description/roomba/: roomba.urdf.xacro
robot_description/roomba/meshes/: roomba_caster_wheel_body.dae  roomba_caster_wheel_visual.dae  roomba_robot_body_body.dae  roomba_robot_body_visual.dae  roomba_wheel_body.dae  roomba_wheel_body_visual.dae
roomba/: move_roomba.py
