<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roomba</name>
  <version>0.0.1</version>
  <description>Roomba Vacuum Robot</description>
  <maintainer email="camiloarac@gmail.com">ros</maintainer>
  <license>MIT</license>


  <depend>rqt_robot_steering</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>ros2_control</depend>
  <depend>ign_ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>realsense2_description</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
